--- a/Aula20022020/index.html
+++ b/Aula20022020/index.html
@@ -2,7 +2,20 @@
 <html>
     <head>
         <title>Minha primeira página</title>
+
+        <style>
+            p {
+                color: #fa12fa;
+                font-size: 25pt;
+                font-weight: bold;
+            }
+            strong{
+                text-transform: uppercase;
+
+            }
+        </style>
     </head>
+
     <body>
         <h1>Titulo</h1>
         <h2>Titulo 2</h2>
